@@ -92,7 +92,8 @@ Contributors:
                 Formats: M3U, PLS, FLAC, AMR-WB, 24bit support for popular
                 formats.
 		Effects: pad, bass, treble, new flanger, soft-knee companding,
-                speed via resampling, filters makeover inc. octave plots.
+                speed via resampling, filters makeover inc. gnuplot & octave
+                plotting.
                 Others: open input files via URL, file merging, play
                 multiple files with mixed format types, play with replay-gain,
                 much manual improvement and expansion, various fixes,
