@@ -66,8 +66,9 @@ int sox_biquad_start(eff_t effp)
   p->a2 = p->a2/p->a0;
   p->a1 = p->a1/p->a0;
 
-  if (effp->globalinfo->octave_plot_effect) {
+  if (effp->globalinfo->plot == sox_plot_octave) {
     printf(
+      "%% GNU Octave file (may also work with MATLAB(R) )\n"
       "title('SoX effect: %s gain=%g frequency=%g %s=%g (rate=%u)')\n"
       "xlabel('Frequency (Hz)')\n"
       "ylabel('Amplitude Response (dB)')\n"
@@ -76,8 +77,30 @@ int sox_biquad_start(eff_t effp)
       "sweepF=logspace(log10(minF),log10(maxF),200);\n"
       "grid on\n"
       "[h,w]=freqz([%g %g %g],[1 %g %g],sweepF,Fs);\n"
-      "semilogx(w,20*log10(h),'b')\n"
+      "semilogx(w,20*log10(h))\n"
+      "disp('Hit return to continue')\n"
       "pause\n"
+      , effp->name, p->gain, p->fc, width_str[p->width_type], p->width
+      , effp->ininfo.rate, effp->ininfo.rate
+      , p->b0, p->b1, p->b2, p->a1, p->a2
+      );
+    return SOX_EOF;
+  }
+  if (effp->globalinfo->plot == sox_plot_gnuplot) {
+    printf(
+      "# gnuplot file\n"
+      "set title 'SoX effect: %s gain=%g frequency=%g %s=%g (rate=%u)'\n"
+      "set xlabel 'Frequency (Hz)'\n"
+      "set ylabel 'Amplitude Response (dB)'\n"
+      "Fs=%u.\n"
+      "b0=%g; b1=%g; b2=%g; a1=%g; a2=%g\n"
+      "o=2*pi/Fs\n"
+      "H(f)=sqrt((b0*b0+b1*b1+b2*b2+2.*(b0*b1+b1*b2)*cos(f*o)+2.*(b0*b2)*cos(2.*f*o))/(1.+a1*a1+a2*a2+2.*(a1+a1*a2)*cos(f*o)+2.*a2*cos(2.*f*o)))\n"
+      "set logscale x\n"
+      "set grid xtics ytics\n"
+      "set key off\n"
+      "plot [f=10:Fs/2] [-35:25] 20*log10(H(f))\n"
+      "pause -1 'Hit return to continue'\n"
       , effp->name, p->gain, p->fc, width_str[p->width_type], p->width
       , effp->ininfo.rate, effp->ininfo.rate
       , p->b0, p->b1, p->b2, p->a1, p->a2
